test/bad/sample47.dave
// Failed Fld Definition
int main() {
	fld x = new fld({"a","b","c","d"}, "alpha");
	print(x);

}